--- a/codigoFonte/index.html
+++ b/codigoFonte/index.html
@@ -195,62 +195,62 @@
           </div>
         </div>
         <div class="card">
-          <img src="" alt="Título do Filme">
+          <img src="./src/img/panico-6card.jpg" alt="Título do Filme">
           <div class="info">
-            <h2>Peter Pan</h2>
-            <p>Duração: 1h40min
+            <h2>Pânico 6</h2>
+            <p>Duração: 2h20min
+              Gênero: Terror, Mistério
+            </p>     
+            <p>Onde Assistir: <a href="https://www.primevideo.com/dp/amzn1.dv.gti.ead3d5c9-4c21-4fbe-967d-a82ddd6fc2fb?autoplay=0&ref_=atv_cf_strg_wb" target="_blank">AmazonPrime</a> </p>
+            <button class="trailer-button" data-trailer="https://www.youtube.com/watch?v=F4LhySFaOMo&pp=ygUZUMOibmljbyA2IHRyYWlsZXIgZHVibGFkbw%3D%3D">Assista ao
+              Trailer</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="./src/img/super-mario-bros-the-movie Card.jpg" alt="Título do Filme">
+          <div class="info">
+            <h2>Super Mario Bros. O Filme</h2>
+            <p>Duração: 1h32min
               Gênero: fantasia; aventura
             </p>     
-            <p>Onde Assistir: <a href="" target="_blank"></a> </p>
-            <button class="trailer-button" data-trailer="">Assista ao
+            <p>Onde Assistir: <a href="https://www.primevideo.com/offers/nonprimehomepage/ref=dvm_pds_gen_br_dc_s_g_mkw_sUwpgcnSC-dc_pcrid_607158326050?gclid=Cj0KCQjwpPKiBhDvARIsACn-gzDYD6tFt2duSkKijng5bsxh0H87-APOxMr1nHgnCIYLMS-P1iSvGLUaAvUQEALw_wcB&mrntrk=slid__pgrid_62046172966_pgeo_9074168_x__adext__ptid_kwd-325701327729" target="_blank">AmazonPrime</a> </p>
+            <button class="trailer-button" data-trailer="https://www.youtube.com/watch?v=cDNkh5WybZo&pp=ygUpU3VwZXIgTWFyaW8gQnJvcy4gTyBGaWxtZSB0cmFpbGVyIGR1YmxhZG8%3D">Assista ao
               Trailer</button>
           </div>
         </div>
         <div class="card">
-          <img src="" alt="Título do Filme">
+          <img src="./src/img/Homem aranha de volta.jpg" alt="Título do Filme">
           <div class="info">
-            <h2>Peter Pan</h2>
-            <p>Duração: 1h40min
-              Gênero: fantasia; aventura
-            </p>     
-            <p>Onde Assistir: <a href="" target="_blank"></a> </p>
-            <button class="trailer-button" data-trailer="">Assista ao
-              Trailer</button>
-          </div>
-        </div>
-        <div class="card">
-          <img src="" alt="Título do Filme">
-          <div class="info">
-            <h2>Peter Pan</h2>
-            <p>Duração: 1h40min
-              Gênero: fantasia; aventura
+            <h2>Homem-Aranha: De Volta ao Lar</h2>
+            <p>Duração: 2h30min
+              Gênero: Ação; aventura
             </p>   
-            <p>Onde Assistir: <a href="" target="_blank"></a> </p>
-            <button class="trailer-button" data-trailer="">Assista ao
+            <p>Onde Assistir: <a href="https://www.netflix.com/br/title/80166369" target="_blank">Netflix</a> </p>
+            <button class="trailer-button" data-trailer="https://www.youtube.com/watch?v=2x-2iYxgMFU&pp=ygUtSG9tZW0tQXJhbmhhOiBEZSBWb2x0YSBhbyBMYXIgdHJhaWxlciBkdWJsYWRv">Assista ao
               Trailer</button>
           </div>
         </div>
         <div class="card">
-          <img src="" alt="Título do Filme">
+          <img src="./src/img/Creed_3.jpg" alt="Título do Filme">
           <div class="info">
-            <h2>Peter Pan</h2>
-            <p>Duração: 1h40min
-              Gênero: fantasia; aventura
+            <h2>Creed III</h2>
+            <p>Duração: 1h56min
+              Gênero: Drama, Esporte
             </p>   
-            <p>Onde Assistir: <a href="" target="_blank"></a> </p>
-            <button class="trailer-button" data-trailer="">Assista ao
+            <p>Onde Assistir: <a href="https://play.google.com/store/movies/details?id=ETQbaOQSwxc.P" target="_blank">Google Play Filmes e Tv</a> </p>
+            <button class="trailer-button" data-trailer="https://www.youtube.com/watch?v=koXO4bo8dEg&pp=ygUZQ3JlZWQgSUlJIHRyYWlsZXIgZHVibGFkbw%3D%3D">Assista ao
               Trailer</button>
           </div>
         </div>
         <div class="card">
-          <img src="" alt="Título do Filme">
+          <img src="./src/img/Nas ondas da fé card.jpg" alt="Título do Filme">
           <div class="info">
-            <h2>Peter Pan</h2>
-            <p>Duração: 1h40min
-              Gênero: fantasia; aventura
+            <h2>Nas Ondas da Fé</h2>
+            <p>Duração: 1h37min
+              Gênero: Comédia
             </p>   
-            <p>Onde Assistir: <a href="" target="_blank"></a> </p>
-            <button class="trailer-button" data-trailer="">Assista ao
+            <p>Onde Assistir: <a href="https://play.google.com/store/movies/details?id=Lqnb0Mcnn9Q.P" target="_blank">Google Play Filmes e Tv</a> </p>
+            <button class="trailer-button" data-trailer="https://www.youtube.com/watch?v=PDO20Dzxpss&pp=ygUYTmFzIE9uZGFzIGRhIEbDqSB0cmFpbGVy">Assista ao
               Trailer</button>
           </div>
         </div>
