--- a/codigoFonte/index.html
+++ b/codigoFonte/index.html
@@ -92,29 +92,29 @@
         <!-- Full-width images with number -->
         <div class="mySlides fade " id="img-active">
           <button class="trailer-button" id="cinema-button"
-            data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
+            data-trailer="https://www.youtube.com/embed/2x-2iYxgMFU">Assista ao
             Trailer</button>
-          <img src="./src/img/homem_aranha.jpg" class="images">
+          <img src="./src/img/Homem aranha de volta.jpg" class="images">
         </div>
 
         <div class="mySlides fade">
           <button class="trailer-button" id="cinema-button"
-            data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
+            data-trailer="https://www.youtube.com/embed/PbEloLH3iKQ">Assista ao
             Trailer</button>
-          <img src="./src/img/coyote-vs-acme.jpg" class="images">
+          <img src="./src/img/shazam2banner.jpg" class="images">
         </div>
 
         <div class="mySlides fade">
           <button class="trailer-button" id="cinema-button"
-            data-trailer="https://www.youtube.com/embed/QOgdGhA9gos">Assista ao
+            data-trailer="https://www.youtube.com/embed/wlOVPkmOe4M">Assista ao
             Trailer</button>
-          <img src="./src/img/Panico-6.jpg" class="images">
+          <img src="./src/img/Panico6baner.jpg" class="images">
         </div>
         <div class="mySlides fade">
           <button class="trailer-button" id="cinema-button"
-            data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
+            data-trailer="https://www.youtube.com/embed/cDNkh5WybZo">Assista ao
             Trailer</button>
-          <img src="./src/img/Super-Mario-Pós-créditos.jpeg" class="images">
+          <img src="./src/img/Super-Mario-Pós-créditos.jpg" class="images">
         </div>
 
         <!-- Next and previous buttons -->
@@ -154,7 +154,7 @@
               Gênero: Suspense, Terror
             </p>
             <p>Onde Assistir: <a href="https://www.primevideo.com/dp/amzn1.dv.gti.b9384a2e-4e28-42c2-929e-b9cb28507b67?autoplay=0&ref_=atv_cf_strg_wb" target="_blank">AmazonPrime</a> </p>
-            <button class="trailer-button" data-trailer="https://www.youtube.com/watch?v=J40ITxP8aGM&pp=ygUoYXF1ZWxlIHF1ZSBoYWJpdGEgZW0gbWltIHRyYWlsZXIgZHVibGFkbw%3D%3D">Assista ao
+            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/J40ITxP8aGM">Assista ao
               Trailer</button>
           </div>
         </div>
@@ -166,7 +166,7 @@
               Gênero: Ação; Aventura
             </p>   
             <p>Onde Assistir: <a href="https://www.primevideo.com/dp/amzn1.dv.gti.b5d0ac26-93a2-4c12-89cb-b8a3540e263c?autoplay=0&ref_=atv_cf_strg_wb" target="_blank">AmazonPrime</a> </p>
-            <button class="trailer-button" data-trailer="https://www.youtube.com/watch?v=PbEloLH3iKQ&pp=ygUWc2hhemFtIHRyYWlsZXIgZHVibGFkbw%3D%3D">Assista ao
+            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/PbEloLH3iKQ">Assista ao
               Trailer</button>
           </div>
         </div>
@@ -178,7 +178,7 @@
               Gênero: Terror, Slasher
             </p>     
             <p>Onde Assistir: <a href="https://play.google.com/store/movies/details?id=ktFpDeW9CdQ.P&pli=1" target="_blank">Google Play Filmes e Tv</a> </p>
-            <button class="trailer-button" data-trailer="https://www.youtube.com/watch?v=7MRcuN9_Pfo&pp=ygUVcGVhcmwgdHJhaWxlciBkdWJsYWRv">Assista ao
+            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/7MRcuN9_Pfo">Assista ao
               Trailer</button>
           </div>
         </div>
@@ -190,7 +190,7 @@
               Gênero: Ação; aventura
             </p>     
             <p>Onde Assistir: <a href="https://play.google.com/store/movies/details?id=3xHZfbNC6bo.P" target="_blank">Google Play Filmes e Tv</a> </p>
-            <button class="trailer-button" data-trailer="https://www.youtube.com/watch?v=8nHQvTrgi58&pp=ygUlQ2HDp2Fkb3IgZGUgVG9ybWVudGFzIHRyYWlsZXIgZHVibGFkbw%3D%3D">Assista ao
+            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/8nHQvTrgi58">Assista ao
               Trailer</button>
           </div>
         </div>
@@ -202,7 +202,7 @@
               Gênero: Terror, Mistério
             </p>     
             <p>Onde Assistir: <a href="https://www.primevideo.com/dp/amzn1.dv.gti.ead3d5c9-4c21-4fbe-967d-a82ddd6fc2fb?autoplay=0&ref_=atv_cf_strg_wb" target="_blank">AmazonPrime</a> </p>
-            <button class="trailer-button" data-trailer="https://www.youtube.com/watch?v=F4LhySFaOMo&pp=ygUZUMOibmljbyA2IHRyYWlsZXIgZHVibGFkbw%3D%3D">Assista ao
+            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/wlOVPkmOe4M">Assista ao
               Trailer</button>
           </div>
         </div>
@@ -214,19 +214,19 @@
               Gênero: fantasia; aventura
             </p>     
             <p>Onde Assistir: <a href="https://www.primevideo.com/offers/nonprimehomepage/ref=dvm_pds_gen_br_dc_s_g_mkw_sUwpgcnSC-dc_pcrid_607158326050?gclid=Cj0KCQjwpPKiBhDvARIsACn-gzDYD6tFt2duSkKijng5bsxh0H87-APOxMr1nHgnCIYLMS-P1iSvGLUaAvUQEALw_wcB&mrntrk=slid__pgrid_62046172966_pgeo_9074168_x__adext__ptid_kwd-325701327729" target="_blank">AmazonPrime</a> </p>
-            <button class="trailer-button" data-trailer="https://www.youtube.com/watch?v=cDNkh5WybZo&pp=ygUpU3VwZXIgTWFyaW8gQnJvcy4gTyBGaWxtZSB0cmFpbGVyIGR1YmxhZG8%3D">Assista ao
+            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/cDNkh5WybZo">Assista ao
               Trailer</button>
           </div>
         </div>
         <div class="card">
-          <img src="./src/img/Homem aranha de volta.jpg" alt="Título do Filme">
+          <img src="./src/img/Homem aranha de voltacard.jpg" alt="Título do Filme">
           <div class="info">
             <h2>Homem-Aranha: De Volta ao Lar</h2>
             <p>Duração: 2h30min
               Gênero: Ação; aventura
             </p>   
             <p>Onde Assistir: <a href="https://www.netflix.com/br/title/80166369" target="_blank">Netflix</a> </p>
-            <button class="trailer-button" data-trailer="https://www.youtube.com/watch?v=2x-2iYxgMFU&pp=ygUtSG9tZW0tQXJhbmhhOiBEZSBWb2x0YSBhbyBMYXIgdHJhaWxlciBkdWJsYWRv">Assista ao
+            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/2x-2iYxgMFU">Assista ao
               Trailer</button>
           </div>
         </div>
@@ -238,7 +238,7 @@
               Gênero: Drama, Esporte
             </p>   
             <p>Onde Assistir: <a href="https://play.google.com/store/movies/details?id=ETQbaOQSwxc.P" target="_blank">Google Play Filmes e Tv</a> </p>
-            <button class="trailer-button" data-trailer="https://www.youtube.com/watch?v=koXO4bo8dEg&pp=ygUZQ3JlZWQgSUlJIHRyYWlsZXIgZHVibGFkbw%3D%3D">Assista ao
+            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/koXO4bo8dEg">Assista ao
               Trailer</button>
           </div>
         </div>
@@ -250,7 +250,7 @@
               Gênero: Comédia
             </p>   
             <p>Onde Assistir: <a href="https://play.google.com/store/movies/details?id=Lqnb0Mcnn9Q.P" target="_blank">Google Play Filmes e Tv</a> </p>
-            <button class="trailer-button" data-trailer="https://www.youtube.com/watch?v=PDO20Dzxpss&pp=ygUYTmFzIE9uZGFzIGRhIEbDqSB0cmFpbGVy">Assista ao
+            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/PDO20Dzxpss">Assista ao
               Trailer</button>
           </div>
         </div>
