--- a/codigoFonte/index.html
+++ b/codigoFonte/index.html
@@ -46,7 +46,7 @@
         Favoritos <span class="material-symbols-outlined"> favorite </span>
       </li>
       <li id="burguer">
-        <span class="material-symbols-outlined">  menu  </span>
+        <span class="material-symbols-outlined"> menu </span>
       </li>
     </ul>
     <menu id="menu-mobile">
@@ -59,77 +59,65 @@
 
     </ul>
 
-
-
   </header>
   <main>
-    <h2 id="titulo-busca">Selecione gênero e Streaming</h2>
-    <section class="search-film-by-streaming">
-      <div class="form-wrapper">
-        <label>Gênero</label>
-        <select name="select">
-          <option value="valor1" selected>Terror</option>
-          <option value="valor2">Ação</option>
-          <option value="valor3">Aventura</option>
-        </select>
-      </div>
-      <div>
-        <label>Streaming</label>
-        <select name="select">
-          <option value="valor1" selected>Netflix</option>
-          <option value="valor2">Amazon Prime</option>
-          <option value="valor3">Globo Play</option>
-          <option value="valor2">AmazonPrime</option>
-          <option value="valor3">GloboPlay</option>
-        </select>
-        <button>Buscar</button>
-      </div>
-    </section>
-    <h1> Filmes em Cartaz nos cinemas</h1>
-    <section class="banner fadeInDown" data-anime="600">
-      <div class="slideshow-container">
 
-        <!-- Full-width images with number -->
-        <div class="mySlides fade " id="img-active">
-          <button class="trailer-button" id="cinema-button"
-            data-trailer="https://www.youtube.com/embed/2x-2iYxgMFU">Assista ao
-            Trailer</button>
-          <img src="./src/img/Homem aranha de volta.jpg" class="images">
-        </div>
 
-        <div class="mySlides fade">
-          <button class="trailer-button" id="cinema-button"
-            data-trailer="https://www.youtube.com/embed/PbEloLH3iKQ">Assista ao
-            Trailer</button>
-          <img src="./src/img/shazam2banner.jpg" class="images">
-        </div>
+    <!-- Full-width images with number -->
+    <div class="mySlides fade " id="img-active">
+      <button class="trailer-button" id="cinema-button" data-trailer="https://www.youtube.com/embed/2x-2iYxgMFU">Assista
+        ao
+        Trailer</button>
+      <img src="./src/img/Homem aranha de volta.jpg" class="images">
+    </div>
 
-        <div class="mySlides fade">
-          <button class="trailer-button" id="cinema-button"
-            data-trailer="https://www.youtube.com/embed/wlOVPkmOe4M">Assista ao
-            Trailer</button>
-          <img src="./src/img/Panico6baner.jpg" class="images">
-        </div>
-        <div class="mySlides fade">
-          <button class="trailer-button" id="cinema-button"
-            data-trailer="https://www.youtube.com/embed/cDNkh5WybZo">Assista ao
-            Trailer</button>
-          <img src="./src/img/Super-Mario-Pós-créditos.jpg" class="images">
-        </div>
+    <div class="mySlides fade">
+      <button class="trailer-button" id="cinema-button" data-trailer="https://www.youtube.com/embed/PbEloLH3iKQ">Assista
+        ao
+        Trailer</button>
+      <img src="./src/img/shazam2banner.jpg" class="images">
+    </div>
 
-        <!-- Next and previous buttons -->
-        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-        <a class="next" onclick="plusSlides(1)">&#10095;</a>
-      </div>
-      <br>
+    <div class="mySlides fade">
+      <button class="trailer-button" id="cinema-button" data-trailer="https://www.youtube.com/embed/wlOVPkmOe4M">Assista
+        ao
+        Trailer</button>
+      <img src="./src/img/Panico6baner.jpg" class="images">
+    </div>
+    <div class="mySlides fade">
+      <button class="trailer-button" id="cinema-button" data-trailer="https://www.youtube.com/embed/cDNkh5WybZo">Assista
+        ao
+        Trailer</button>
+      <img src="./src/img/Super-Mario-Pós-créditos.jpg" class="images">
+    </div>
+    <div class="mySlides fade">
+      <button class="trailer-button" id="cinema-button" data-trailer="https://www.youtube.com/embed/cDNkh5WybZo">Assista
+        ao
+        Trailer</button>
+      <img src="./src/img/Super-Mario-Pós-créditos.jpg" class="images">
+    </div>
+    <div class="mySlides fade">
+      <button class="trailer-button" id="cinema-button" data-trailer="https://www.youtube.com/embed/cDNkh5WybZo">Assista
+        ao
+        Trailer</button>
+      <img src="./src/img/Super-Mario-Pós-créditos.jpg" class="images">
+    </div>
 
-      <!-- The dots/circles -->
-      <div class="dots">
-        <span class="dot" onclick="currentSlide(1)"></span>
-        <span class="dot" onclick="currentSlide(2)"></span>
-        <span class="dot" onclick="currentSlide(3)"></span>
-        <span class="dot" onclick="currentSlide(4)"></span>
-      </div>
+    <!-- Next and previous buttons -->
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    </div>
+    <br>
+
+    <!-- The dots/circles -->
+    <div class="dots">
+      <span class="dot" onclick="currentSlide(1)"></span>
+      <span class="dot" onclick="currentSlide(2)"></span>
+      <span class="dot" onclick="currentSlide(3)"></span>
+      <span class="dot" onclick="currentSlide(4)"></span>
+      <span class="dot" onclick="currentSlide(5)"></span>
+      <span class="dot" onclick="currentSlide(6)"></span>
+    </div>
     </section>
     <h1>Lançamentos</h1>
     <div class="glider-contain">
@@ -140,8 +128,9 @@
             <h2>Peter Pan</h2>
             <p>Duração: 1h40min
               Gênero: Fantasia, Aventura
-            </p>   
-            <p>Onde Assistir: <a href="https://www.disneyplus.com/pt-br/movies/peter-pan-wendy/147B2rQASB09" target="_blank">Disney Plus</a> </p>
+            </p>
+            <p>Onde Assistir: <a href="https://www.disneyplus.com/pt-br/movies/peter-pan-wendy/147B2rQASB09"
+                target="_blank">Disney Plus</a> </p>
             <button class="trailer-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
               Trailer</button>
           </div>
@@ -153,7 +142,9 @@
             <p>Duração: 1h36min
               Gênero: Suspense, Terror
             </p>
-            <p>Onde Assistir: <a href="https://www.primevideo.com/dp/amzn1.dv.gti.b9384a2e-4e28-42c2-929e-b9cb28507b67?autoplay=0&ref_=atv_cf_strg_wb" target="_blank">AmazonPrime</a> </p>
+            <p>Onde Assistir: <a
+                href="https://www.primevideo.com/dp/amzn1.dv.gti.b9384a2e-4e28-42c2-929e-b9cb28507b67?autoplay=0&ref_=atv_cf_strg_wb"
+                target="_blank">AmazonPrime</a> </p>
             <button class="trailer-button" data-trailer="https://www.youtube.com/embed/J40ITxP8aGM">Assista ao
               Trailer</button>
           </div>
@@ -164,8 +155,10 @@
             <h2>Shazam! Fúria dos Deuses</h2>
             <p>Duração: 2h10min
               Gênero: Ação; Aventura
-            </p>   
-            <p>Onde Assistir: <a href="https://www.primevideo.com/dp/amzn1.dv.gti.b5d0ac26-93a2-4c12-89cb-b8a3540e263c?autoplay=0&ref_=atv_cf_strg_wb" target="_blank">AmazonPrime</a> </p>
+            </p>
+            <p>Onde Assistir: <a
+                href="https://www.primevideo.com/dp/amzn1.dv.gti.b5d0ac26-93a2-4c12-89cb-b8a3540e263c?autoplay=0&ref_=atv_cf_strg_wb"
+                target="_blank">AmazonPrime</a> </p>
             <button class="trailer-button" data-trailer="https://www.youtube.com/embed/PbEloLH3iKQ">Assista ao
               Trailer</button>
           </div>
@@ -176,8 +169,9 @@
             <h2>Pearl</h2>
             <p>Duração: 1h42min
               Gênero: Terror, Slasher
-            </p>     
-            <p>Onde Assistir: <a href="https://play.google.com/store/movies/details?id=ktFpDeW9CdQ.P&pli=1" target="_blank">Google Play Filmes e Tv</a> </p>
+            </p>
+            <p>Onde Assistir: <a href="https://play.google.com/store/movies/details?id=ktFpDeW9CdQ.P&pli=1"
+                target="_blank">Google Play Filmes e Tv</a> </p>
             <button class="trailer-button" data-trailer="https://www.youtube.com/embed/7MRcuN9_Pfo">Assista ao
               Trailer</button>
           </div>
@@ -188,8 +182,9 @@
             <h2>Caçador de Tormentas</h2>
             <p>Duração: 1h40min
               Gênero: Ação; aventura
-            </p>     
-            <p>Onde Assistir: <a href="https://play.google.com/store/movies/details?id=3xHZfbNC6bo.P" target="_blank">Google Play Filmes e Tv</a> </p>
+            </p>
+            <p>Onde Assistir: <a href="https://play.google.com/store/movies/details?id=3xHZfbNC6bo.P"
+                target="_blank">Google Play Filmes e Tv</a> </p>
             <button class="trailer-button" data-trailer="https://www.youtube.com/embed/8nHQvTrgi58">Assista ao
               Trailer</button>
           </div>
@@ -200,8 +195,10 @@
             <h2>Pânico 6</h2>
             <p>Duração: 2h20min
               Gênero: Terror, Mistério
-            </p>     
-            <p>Onde Assistir: <a href="https://www.primevideo.com/dp/amzn1.dv.gti.ead3d5c9-4c21-4fbe-967d-a82ddd6fc2fb?autoplay=0&ref_=atv_cf_strg_wb" target="_blank">AmazonPrime</a> </p>
+            </p>
+            <p>Onde Assistir: <a
+                href="https://www.primevideo.com/dp/amzn1.dv.gti.ead3d5c9-4c21-4fbe-967d-a82ddd6fc2fb?autoplay=0&ref_=atv_cf_strg_wb"
+                target="_blank">AmazonPrime</a> </p>
             <button class="trailer-button" data-trailer="https://www.youtube.com/embed/wlOVPkmOe4M">Assista ao
               Trailer</button>
           </div>
@@ -212,8 +209,10 @@
             <h2>Super Mario Bros. O Filme</h2>
             <p>Duração: 1h32min
               Gênero: fantasia; aventura
-            </p>     
-            <p>Onde Assistir: <a href="https://www.primevideo.com/offers/nonprimehomepage/ref=dvm_pds_gen_br_dc_s_g_mkw_sUwpgcnSC-dc_pcrid_607158326050?gclid=Cj0KCQjwpPKiBhDvARIsACn-gzDYD6tFt2duSkKijng5bsxh0H87-APOxMr1nHgnCIYLMS-P1iSvGLUaAvUQEALw_wcB&mrntrk=slid__pgrid_62046172966_pgeo_9074168_x__adext__ptid_kwd-325701327729" target="_blank">AmazonPrime</a> </p>
+            </p>
+            <p>Onde Assistir: <a
+                href="https://www.primevideo.com/offers/nonprimehomepage/ref=dvm_pds_gen_br_dc_s_g_mkw_sUwpgcnSC-dc_pcrid_607158326050?gclid=Cj0KCQjwpPKiBhDvARIsACn-gzDYD6tFt2duSkKijng5bsxh0H87-APOxMr1nHgnCIYLMS-P1iSvGLUaAvUQEALw_wcB&mrntrk=slid__pgrid_62046172966_pgeo_9074168_x__adext__ptid_kwd-325701327729"
+                target="_blank">AmazonPrime</a> </p>
             <button class="trailer-button" data-trailer="https://www.youtube.com/embed/cDNkh5WybZo">Assista ao
               Trailer</button>
           </div>
@@ -224,7 +223,7 @@
             <h2>Homem-Aranha: De Volta ao Lar</h2>
             <p>Duração: 2h30min
               Gênero: Ação; aventura
-            </p>   
+            </p>
             <p>Onde Assistir: <a href="https://www.netflix.com/br/title/80166369" target="_blank">Netflix</a> </p>
             <button class="trailer-button" data-trailer="https://www.youtube.com/embed/2x-2iYxgMFU">Assista ao
               Trailer</button>
@@ -236,8 +235,9 @@
             <h2>Creed III</h2>
             <p>Duração: 1h56min
               Gênero: Drama, Esporte
-            </p>   
-            <p>Onde Assistir: <a href="https://play.google.com/store/movies/details?id=ETQbaOQSwxc.P" target="_blank">Google Play Filmes e Tv</a> </p>
+            </p>
+            <p>Onde Assistir: <a href="https://play.google.com/store/movies/details?id=ETQbaOQSwxc.P"
+                target="_blank">Google Play Filmes e Tv</a> </p>
             <button class="trailer-button" data-trailer="https://www.youtube.com/embed/koXO4bo8dEg">Assista ao
               Trailer</button>
           </div>
@@ -248,21 +248,137 @@
             <h2>Nas Ondas da Fé</h2>
             <p>Duração: 1h37min
               Gênero: Comédia
-            </p>   
-            <p>Onde Assistir: <a href="https://play.google.com/store/movies/details?id=Lqnb0Mcnn9Q.P" target="_blank">Google Play Filmes e Tv</a> </p>
+            </p>
+            <p>Onde Assistir: <a href="https://play.google.com/store/movies/details?id=Lqnb0Mcnn9Q.P"
+                target="_blank">Google Play Filmes e Tv</a> </p>
             <button class="trailer-button" data-trailer="https://www.youtube.com/embed/PDO20Dzxpss">Assista ao
               Trailer</button>
           </div>
         </div>
-        <div>your content here</div>
-      </div>
-          <button aria-label="Previous" class="glider-prev">«</button>
-          <button aria-label="Next" class="glider-next">»</button>
-          <div role="tablist" class="dots"></div>
+        <div class="card">
+          <img src="./src/img/peterpan.jpg" alt="Título do Filme">
+          <div class="info">
+            <h2>Peter Pan</h2>
+            <p>Duração: 1h40min
+              Gênero: Fantasia, Aventura
+            </p>
+            <p>Onde Assistir: <a href="https://www.disneyplus.com/pt-br/movies/peter-pan-wendy/147B2rQASB09"
+                target="_blank">Disney Plus</a> </p>
+            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
+              Trailer</button>
+          </div>
         </div>
-        <div id="resp-dots"></div>
-        <script src="./Glider.js-master/glider.min.js"></script>
-        
+      </div>
+      <button aria-label="Previous" class="glider-prev">«</button>
+      <button aria-label="Next" class="glider-next">»</button>
+      <div role="tablist" class="dots"></div>
+    </div>
+    <div id="resp-dots"></div>
+
+    <h1>Aclamados pela Crítica</h1>
+
+    <div class="glider-contain">
+      <div class="glider-2">
+        <div class="card">
+          <img src="./src/img/peterpan.jpg" alt="Título do Filme">
+          <div class="info">
+            <h2>Peter Pan</h2>
+            <p>Duração: 1h40min
+              Gênero: Fantasia, Aventura
+            </p>
+            <p>Onde Assistir: <a href="https://www.disneyplus.com/pt-br/movies/peter-pan-wendy/147B2rQASB09"
+                target="_blank">Disney Plus</a> </p>
+            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
+              Trailer</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="./src/img/peterpan.jpg" alt="Título do Filme">
+          <div class="info">
+            <h2>Peter Pan</h2>
+            <p>Duração: 1h40min
+              Gênero: Fantasia, Aventura
+            </p>
+            <p>Onde Assistir: <a href="https://www.disneyplus.com/pt-br/movies/peter-pan-wendy/147B2rQASB09"
+                target="_blank">Disney Plus</a> </p>
+            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
+              Trailer</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="./src/img/peterpan.jpg" alt="Título do Filme">
+          <div class="info">
+            <h2>Peter Pan</h2>
+            <p>Duração: 1h40min
+              Gênero: Fantasia, Aventura
+            </p>
+            <p>Onde Assistir: <a href="https://www.disneyplus.com/pt-br/movies/peter-pan-wendy/147B2rQASB09"
+                target="_blank">Disney Plus</a> </p>
+            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
+              Trailer</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="./src/img/peterpan.jpg" alt="Título do Filme">
+          <div class="info">
+            <h2>Peter Pan</h2>
+            <p>Duração: 1h40min
+              Gênero: Fantasia, Aventura
+            </p>
+            <p>Onde Assistir: <a href="https://www.disneyplus.com/pt-br/movies/peter-pan-wendy/147B2rQASB09"
+                target="_blank">Disney Plus</a> </p>
+            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
+              Trailer</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="./src/img/peterpan.jpg" alt="Título do Filme">
+          <div class="info">
+            <h2>Peter Pan</h2>
+            <p>Duração: 1h40min
+              Gênero: Fantasia, Aventura
+            </p>
+            <p>Onde Assistir: <a href="https://www.disneyplus.com/pt-br/movies/peter-pan-wendy/147B2rQASB09"
+                target="_blank">Disney Plus</a> </p>
+            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
+              Trailer</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="./src/img/peterpan.jpg" alt="Título do Filme">
+          <div class="info">
+            <h2>Peter Pan</h2>
+            <p>Duração: 1h40min
+              Gênero: Fantasia, Aventura
+            </p>
+            <p>Onde Assistir: <a href="https://www.disneyplus.com/pt-br/movies/peter-pan-wendy/147B2rQASB09"
+                target="_blank">Disney Plus</a> </p>
+            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
+              Trailer</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="./src/img/peterpan.jpg" alt="Título do Filme">
+          <div class="info">
+            <h2>Peter Pan</h2>
+            <p>Duração: 1h40min
+              Gênero: Fantasia, Aventura
+            </p>
+            <p>Onde Assistir: <a href="https://www.disneyplus.com/pt-br/movies/peter-pan-wendy/147B2rQASB09"
+                target="_blank">Disney Plus</a> </p>
+            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
+              Trailer</button>
+          </div>
+        </div>
+      </div>
+
+      <button aria-label="Previous" class="glider-prev">«</button>
+      <button aria-label="Next" class="glider-next">»</button>
+      <div role="tablist" class="dots"></div>
+    </div>
+    <div id="resp-dots"></div>
+    <script src="./Glider.js-master/glider.min.js" defer></script>
+
   </main>
 
   <footer class="footer">
