--- a/codigoFonte/index.html
+++ b/codigoFonte/index.html
@@ -280,15 +280,15 @@
     <div class="glider-contain">
       <div class="glider-2">
         <div class="card">
-          <img src="./src/img/peterpan.jpg" alt="Título do Filme">
+          <img src="./src/img/um-sonho-de-liberdade-poster.jpg" alt="Título do Filme">
           <div class="info">
-            <h2>Peter Pan</h2>
-            <p>Duração: 1h40min
-              Gênero: Fantasia, Aventura
+            <h2>Um Sonho de Liberdade (1994)</h2>
+            <p>Duração: 2h22min
+              Gênero: Drama, Ficção Policial
             </p>
-            <p>Onde Assistir: <a href="https://www.disneyplus.com/pt-br/movies/peter-pan-wendy/147B2rQASB09"
-                target="_blank">Disney Plus</a> </p>
-            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
+            <p>Onde Assistir: <a href="https://play.google.com/store/movies/details?id=yzvgVa69Kdg.P"
+                target="_blank">Google Play Filmes e Tv</a> </p>
+            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/v1nZq1vfgSw">Assista ao
               Trailer</button>
           </div>
         </div>
