fix banner position

--- a/codigoFonte/index.html
+++ b/codigoFonte/index.html
@@ -61,8 +61,7 @@
 
   </header>
   <main>
-
-
+    <h1 id="title-cine">Nas telas do Cinema</h1>
     <!-- Full-width images with number -->
     <div class="mySlides fade " id="img-active">
       <button class="trailer-button" id="cinema-button" data-trailer="https://www.youtube.com/embed/2x-2iYxgMFU">Assista
@@ -371,12 +370,11 @@
           </div>
         </div>
       </div>
-
-      <button aria-label="Previous" class="glider-prev">«</button>
-      <button aria-label="Next" class="glider-next">»</button>
+      <button aria-label="Previous" class="arrow-prev">«</button>
+      <button aria-label="Next" class="arrow-next">»</button>
       <div role="tablist" class="dots"></div>
     </div>
-    <div id="resp-dots"></div>
+    <div id="responsive-dots"></div>
     <script src="./Glider.js-master/glider.min.js" defer></script>
 
   </main>
