--- a/codigoFonte/index.html
+++ b/codigoFonte/index.html
@@ -292,80 +292,80 @@
           </div>
         </div>
         <div class="card">
-          <img src="./src/img/peterpan.jpg" alt="Título do Filme">
+          <img src="./src/img/PulpFictioncard.jpg" alt="Título do Filme">
           <div class="info">
-            <h2>Peter Pan</h2>
-            <p>Duração: 1h40min
-              Gênero: Fantasia, Aventura
+            <h2>Pulp Fiction: Tempo de Violência (1994)</h2>
+            <p>Duração: 2h34min
+              Gênero: Crime, Drama
             </p>
-            <p>Onde Assistir: <a href="https://www.disneyplus.com/pt-br/movies/peter-pan-wendy/147B2rQASB09"
-                target="_blank">Disney Plus</a> </p>
-            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
+            <p>Onde Assistir: <a href="https://play.google.com/store/movies/details?id=0GoYSWUV1Ls"
+                target="_blank">Google Play Filmes e Tv</a> </p>
+            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/r5m52kbw0cU">Assista ao
               Trailer</button>
           </div>
         </div>
         <div class="card">
-          <img src="./src/img/peterpan.jpg" alt="Título do Filme">
+          <img src="./src/img/Clubdalutacard.jpg" alt="Título do Filme">
           <div class="info">
-            <h2>Peter Pan</h2>
-            <p>Duração: 1h40min
-              Gênero: Fantasia, Aventura
+            <h2>Club da Luta (1999)</h2>
+            <p>Duração: 2h19min
+              Gênero: Suspense, Drama
             </p>
-            <p>Onde Assistir: <a href="https://www.disneyplus.com/pt-br/movies/peter-pan-wendy/147B2rQASB09"
-                target="_blank">Disney Plus</a> </p>
-            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
+            <p>Onde Assistir: <a href="https://www.primevideo.com/dp/amzn1.dv.gti.14b02470-fb0f-7d69-c65e-b9ab1c235283?autoplay=0&ref_=atv_cf_strg_wb"
+                target="_blank">AmazonPrime</a> </p>
+            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/Fs0-4NLSO2Y">Assista ao
               Trailer</button>
           </div>
         </div>
         <div class="card">
-          <img src="./src/img/peterpan.jpg" alt="Título do Filme">
+          <img src="./src/img/ForrestGumpcard.jpg" alt="Título do Filme">
           <div class="info">
-            <h2>Peter Pan</h2>
-            <p>Duração: 1h40min
-              Gênero: Fantasia, Aventura
+            <h2>Forrest Gump: O Contador de Histórias (1994)</h2>
+            <p>Duração: 2h22min
+              Gênero: Drama, Romanse
             </p>
-            <p>Onde Assistir: <a href="https://www.disneyplus.com/pt-br/movies/peter-pan-wendy/147B2rQASB09"
-                target="_blank">Disney Plus</a> </p>
-            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
+            <p>Onde Assistir: <a href="https://www.primevideo.com/dp/amzn1.dv.gti.dcb980c4-4b61-2618-1a5e-75b3b56f1996?autoplay=0&ref_=atv_cf_strg_wb"
+                target="_blank">AmazonPrime</a> </p>
+            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/vDY_uZAaU7g">Assista ao
               Trailer</button>
           </div>
         </div>
         <div class="card">
-          <img src="./src/img/peterpan.jpg" alt="Título do Filme">
+          <img src="./src/img/CidadedeDeuscard.jpg" alt="Título do Filme">
           <div class="info">
-            <h2>Peter Pan</h2>
-            <p>Duração: 1h40min
-              Gênero: Fantasia, Aventura
+            <h2>Cidade de Deus (2002)</h2>
+            <p>Duração: 2h20min
+              Gênero: Crime, Drama
             </p>
-            <p>Onde Assistir: <a href="https://www.disneyplus.com/pt-br/movies/peter-pan-wendy/147B2rQASB09"
-                target="_blank">Disney Plus</a> </p>
-            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
+            <p>Onde Assistir: <a href="https://globoplay.globo.com/cidade-de-deus/t/5vXVkLJN1R/"
+                target="_blank">Globoplay</a> </p>
+            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/fZJUKixyeXM">Assista ao
               Trailer</button>
           </div>
         </div>
         <div class="card">
-          <img src="./src/img/peterpan.jpg" alt="Título do Filme">
+          <img src="./src/img/oresgatedosoldadoryancard.jpg" alt="Título do Filme">
           <div class="info">
-            <h2>Peter Pan</h2>
-            <p>Duração: 1h40min
-              Gênero: Fantasia, Aventura
+            <h2>O Resgate do Soldado Ryan (1998)</h2>
+            <p>Duração: 2h50min
+              Gênero: Guerra, Ação
             </p>
-            <p>Onde Assistir: <a href="https://www.disneyplus.com/pt-br/movies/peter-pan-wendy/147B2rQASB09"
-                target="_blank">Disney Plus</a> </p>
-            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
+            <p>Onde Assistir: <a href="https://play.google.com/store/movies/details?id=Za_Ni4KgQs8"
+                target="_blank">Google Play Filmes e Tv</a> </p>
+            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/WdHJ_nLRjIA">Assista ao
               Trailer</button>
           </div>
         </div>
         <div class="card">
-          <img src="./src/img/peterpan.jpg" alt="Título do Filme">
+          <img src="./src/img/cantandonachuvacrd.jpg" alt="Título do Filme">
           <div class="info">
-            <h2>Peter Pan</h2>
-            <p>Duração: 1h40min
-              Gênero: Fantasia, Aventura
+            <h2>Cantando na Chuva (1952)</h2>
+            <p>Duração: 1h43min
+              Gênero: Musical, Romanse
             </p>
-            <p>Onde Assistir: <a href="https://www.disneyplus.com/pt-br/movies/peter-pan-wendy/147B2rQASB09"
-                target="_blank">Disney Plus</a> </p>
-            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
+            <p>Onde Assistir: <a href="https://play.google.com/store/movies/details?id=_fBiAERKFAs.P"
+                target="_blank">Google Play Filmes e Tv</a> </p>
+            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/s7z_NgOTQu8">Assista ao
               Trailer</button>
           </div>
         </div>
