Modificando cores dos cards

--- a/codigoFonte/index.html
+++ b/codigoFonte/index.html
@@ -282,9 +282,8 @@
           <img src="./src/img/um-sonho-de-liberdade-poster.jpg" alt="Título do Filme">
           <div class="info">
             <h2>Um Sonho de Liberdade (1994)</h2>
-            <p>Duração: 2h22min
-              Gênero: Drama, Ficção Policial
-            </p>
+            <p>Duração: 2h22min</p>
+             <p>  Gênero: Drama, Ficção Policial </p>
             <p>Onde Assistir: <a href="https://play.google.com/store/movies/details?id=yzvgVa69Kdg.P"
                 target="_blank">Google Play Filmes e Tv</a> </p>
             <button class="trailer-button" data-trailer="https://www.youtube.com/embed/v1nZq1vfgSw">Assista ao
