--- a/src/index.html
+++ b/src/index.html
@@ -127,9 +127,8 @@
           <img src="./img/peterpan.jpg" alt="Título do Filme">
           <div class="info">
             <h2>Peter Pan</h2>
-            <p>Duração: 1h40min
-              Gênero: Fantasia, Aventura
-            </p>
+            <p>Duração: 1h40min</p>
+            <p>Gênero: Fantasia, Aventura</p>
             <p>Onde Assistir: <a href="https://www.disneyplus.com/pt-br/movies/peter-pan-wendy/147B2rQASB09"
                 target="_blank">Disney Plus</a> </p>
             <button class="trailer-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
@@ -141,8 +140,8 @@
           <div class="info">
             <h2>Aquele que habita em mim</h2>
             <p>Duração: 1h36min
-              Gênero: Suspense, Terror
             </p>
+            <p>Gênero: Suspense, Terror</p>
             <p>Onde Assistir: <a
                 href="https://www.primevideo.com/dp/amzn1.dv.gti.b9384a2e-4e28-42c2-929e-b9cb28507b67?autoplay=0&ref_=atv_cf_strg_wb"
                 target="_blank">AmazonPrime</a> </p>
