Corrigindo erros gramaticais

--- a/src/nostalgia.html
+++ b/src/nostalgia.html
@@ -110,7 +110,7 @@
           <div class="info">
             <h2>Forrest Gump: O Contador de Histórias (1994)</h2>
             <p>Duração: 2h22min
-              Gênero: Drama, Romanse
+              Gênero: Drama, Romance
             </p>
             <p>Onde Assistir: <a href="https://www.primevideo.com/dp/amzn1.dv.gti.dcb980c4-4b61-2618-1a5e-75b3b56f1996?autoplay=0&ref_=atv_cf_strg_wb"
                 target="_blank">AmazonPrime</a> </p>
@@ -149,7 +149,7 @@
           <div class="info">
             <h2>Cantando na Chuva (1952)</h2>
             <p>Duração: 1h43min
-              Gênero: Musical, Romanse
+              Gênero: Musical, Romance
             </p>
             <p>Onde Assistir: <a href="https://play.google.com/store/movies/details?id=_fBiAERKFAs.P"
                 target="_blank">Google Play Filmes e Tv</a> </p>
@@ -206,7 +206,7 @@
           <div class="info">
             <h2>Forrest Gump: O Contador de Histórias (1994)</h2>
             <p>Duração: 2h22min
-              Gênero: Drama, Romanse
+              Gênero: Drama, Romance
             </p>
             <p>Onde Assistir: <a href="https://www.primevideo.com/dp/amzn1.dv.gti.dcb980c4-4b61-2618-1a5e-75b3b56f1996?autoplay=0&ref_=atv_cf_strg_wb"
                 target="_blank">AmazonPrime</a> </p>
@@ -245,7 +245,7 @@
           <div class="info">
             <h2>Cantando na Chuva (1952)</h2>
             <p>Duração: 1h43min
-              Gênero: Musical, Romanse
+              Gênero: Musical, Romance
             </p>
             <p>Onde Assistir: <a href="https://play.google.com/store/movies/details?id=_fBiAERKFAs.P"
                 target="_blank">Google Play Filmes e Tv</a> </p>
