Adiciona um card na sessão nostalgia

--- a/src/nostalgia.html
+++ b/src/nostalgia.html
@@ -119,15 +119,15 @@
           </div>
         </div>
         <div class="card">
-          <img src="./img/CidadedeDeuscard.jpg" alt="Título do Filme">
+          <img src="./img/O-guarda-costas.jpg" alt="Título do Filme">
           <div class="info">
-            <h2>Cidade de Deus (2002)</h2>
-            <p>Duração: 2h20min
-              Gênero: Crime, Drama
+            <h2>O O Guarda-Costas (1993)</h2>
+            <p>Duração: 2h09min
+              Gênero: Romance, Drama,Comédia
             </p>
-            <p>Onde Assistir: <a href="https://globoplay.globo.com/cidade-de-deus/t/5vXVkLJN1R/"
-                target="_blank">Globoplay</a> </p>
-            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/fZJUKixyeXM">Assista ao
+            <p>Onde Assistir: <a href="https://www.hbomax.com/br/pt/feature/urn:hbo:feature:GXyIOMgXkX528vgEAAAJF"
+                target="_blank">Hbomax</a> </p>
+            <button class="trailer-button" data-trailer="https://www.youtube.com/watch?v=v4qauDAr_hA">Assista ao
               Trailer</button>
           </div>
         </div>
