Banner, Footer e Cards
Adicionado Filmes ao Banner, consertada cor do footer, feito alinhamento da descrição dos fimes

--- a/src/index.html
+++ b/src/index.html
@@ -61,6 +61,19 @@
 
   </header>
   <main>
+
+    <select name="Gênero">
+  <option value="Terror">Terror</option>
+  <option value="Animação" selected>Animação</option>
+  <option value="Comédia">Comédia</option>
+</select>
+
+<select name="Streaming">
+  <option value="Netflix">Netflix</option>
+  <option value="AmazonPrime" selected>AmazonPrime</option>
+  <option value="Globoplay">Globoplay</option>
+</select>
+
     <h1 id="title-cine">Nas telas do Cinema</h1>
 
     <!-- Full-width images with number -->
@@ -68,7 +81,7 @@
       <button class="trailer-button" id="cinema-button" data-trailer="https://www.youtube.com/embed/2x-2iYxgMFU">Assista
         ao
         Trailer</button>
-      <img src="./img/Homem aranha de volta.jpg" class="images">
+      <img src="./img/Homem aranha de volta.png" class="images">
     </div>
 
     <div class="mySlides fade">
@@ -91,16 +104,22 @@
       <img src="./img/Super-Mario-Pós-créditos.jpg" class="images">
     </div>
     <div class="mySlides fade">
-      <button class="trailer-button" id="cinema-button" data-trailer="https://www.youtube.com/embed/cDNkh5WybZo">Assista
+      <button class="trailer-button" id="cinema-button" data-trailer="https://www.youtube.com/embed/JcKRaUGJcqY">Assista
         ao
         Trailer</button>
-      <img src="./img/Super-Mario-Pós-créditos.jpg" class="images">
+      <img src="./img/Meganbanner.jpg" class="images">
     </div>
     <div class="mySlides fade">
-      <button class="trailer-button" id="cinema-button" data-trailer="https://www.youtube.com/embed/cDNkh5WybZo">Assista
+      <button class="trailer-button" id="cinema-button" data-trailer="https://www.youtube.com/embed/7MRcuN9_Pfo">Assista
         ao
         Trailer</button>
-      <img src="./img/Super-Mario-Pós-créditos.jpg" class="images">
+      <img src="./img/pearlbanner.jpg" class="images">
+    </div>
+    <div class="mySlides fade">
+      <button class="trailer-button" id="cinema-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista
+        ao
+        Trailer</button>
+      <img src="./img/Peterpanbanner.jpg" class="images">
     </div>
 
     <!-- Next and previous buttons -->
@@ -139,8 +158,7 @@
           <img src="./img/the-inhabitant-2022-02.jpg" alt="Título do Filme">
           <div class="info">
             <h2>Aquele que habita em mim</h2>
-            <p>Duração: 1h36min
-            </p>
+            <p>Duração: 1h36min</p>
             <p>Gênero: Suspense, Terror</p>
             <p>Onde Assistir: <a
                 href="https://www.primevideo.com/dp/amzn1.dv.gti.b9384a2e-4e28-42c2-929e-b9cb28507b67?autoplay=0&ref_=atv_cf_strg_wb"
@@ -153,9 +171,8 @@
           <img src="./img/shazam.jpg" alt="Título do Filme">
           <div class="info">
             <h2>Shazam! Fúria dos Deuses</h2>
-            <p>Duração: 2h10min
-              Gênero: Ação; Aventura
-            </p>
+            <p>Duração: 2h10min</p>
+            <p>Gênero: Ação; Aventura</p>
             <p>Onde Assistir: <a
                 href="https://www.primevideo.com/dp/amzn1.dv.gti.b5d0ac26-93a2-4c12-89cb-b8a3540e263c?autoplay=0&ref_=atv_cf_strg_wb"
                 target="_blank">AmazonPrime</a> </p>
@@ -167,9 +184,8 @@
           <img src="./img/Pearl_2022.jpg" alt="Título do Filme">
           <div class="info">
             <h2>Pearl</h2>
-            <p>Duração: 1h42min
-              Gênero: Terror, Slasher
-            </p>
+            <p>Duração: 1h42min</p>
+            <p>Gênero: Terror, Slasher</p>
             <p>Onde Assistir: <a href="https://play.google.com/store/movies/details?id=ktFpDeW9CdQ.P&pli=1"
                 target="_blank">Google Play Filmes e Tv</a> </p>
             <button class="trailer-button" data-trailer="https://www.youtube.com/embed/7MRcuN9_Pfo">Assista ao
@@ -180,9 +196,8 @@
           <img src="./img/Caçador de tormentas.jpg" alt="Título do Filme">
           <div class="info">
             <h2>Caçador de Tormentas</h2>
-            <p>Duração: 1h40min
-              Gênero: Ação; aventura
-            </p>
+            <p>Duração: 1h40min</p>
+            <p>Gênero: Ação; aventura</p>
             <p>Onde Assistir: <a href="https://play.google.com/store/movies/details?id=3xHZfbNC6bo.P"
                 target="_blank">Google Play Filmes e Tv</a> </p>
             <button class="trailer-button" data-trailer="https://www.youtube.com/embed/8nHQvTrgi58">Assista ao
@@ -193,9 +208,8 @@
           <img src="./img/panico-6card.jpg" alt="Título do Filme">
           <div class="info">
             <h2>Pânico 6</h2>
-            <p>Duração: 2h20min
-              Gênero: Terror, Mistério
-            </p>
+            <p>Duração: 2h20min</p>
+            <p>Gênero: Terror, Mistério</p>
             <p>Onde Assistir: <a
                 href="https://www.primevideo.com/dp/amzn1.dv.gti.ead3d5c9-4c21-4fbe-967d-a82ddd6fc2fb?autoplay=0&ref_=atv_cf_strg_wb"
                 target="_blank">AmazonPrime</a> </p>
@@ -207,9 +221,8 @@
           <img src="./img/super-mario-bros-the-movie Card.jpg" alt="Título do Filme">
           <div class="info">
             <h2>Super Mario Bros. O Filme</h2>
-            <p>Duração: 1h32min
-              Gênero: fantasia; aventura
-            </p>
+            <p>Duração: 1h32min</p>
+            <p>Gênero: fantasia; aventura</p>
             <p>Onde Assistir: <a
                 href="https://www.primevideo.com/offers/nonprimehomepage/ref=dvm_pds_gen_br_dc_s_g_mkw_sUwpgcnSC-dc_pcrid_607158326050?gclid=Cj0KCQjwpPKiBhDvARIsACn-gzDYD6tFt2duSkKijng5bsxh0H87-APOxMr1nHgnCIYLMS-P1iSvGLUaAvUQEALw_wcB&mrntrk=slid__pgrid_62046172966_pgeo_9074168_x__adext__ptid_kwd-325701327729"
                 target="_blank">AmazonPrime</a> </p>
@@ -221,9 +234,8 @@
           <img src="./img/Homem aranha de voltacard.jpg" alt="Título do Filme">
           <div class="info">
             <h2>Homem-Aranha: De Volta ao Lar</h2>
-            <p>Duração: 2h30min
-              Gênero: Ação; aventura
-            </p>
+            <p>Duração: 2h30min</p>
+            <p>Gênero: Ação; aventura</p>
             <p>Onde Assistir: <a href="https://www.netflix.com/br/title/80166369" target="_blank">Netflix</a> </p>
             <button class="trailer-button" data-trailer="https://www.youtube.com/embed/2x-2iYxgMFU">Assista ao
               Trailer</button>
@@ -233,9 +245,8 @@
           <img src="./img/Creed_3.jpg" alt="Título do Filme">
           <div class="info">
             <h2>Creed III</h2>
-            <p>Duração: 1h56min
-              Gênero: Drama, Esporte
-            </p>
+            <p>Duração: 1h56min</p>
+            <p>Gênero: Drama, Esporte</p>
             <p>Onde Assistir: <a href="https://play.google.com/store/movies/details?id=ETQbaOQSwxc.P"
                 target="_blank">Google Play Filmes e Tv</a> </p>
             <button class="trailer-button" data-trailer="https://www.youtube.com/embed/koXO4bo8dEg">Assista ao
@@ -246,9 +257,8 @@
           <img src="./img/Nas ondas da fé card.jpg" alt="Título do Filme">
           <div class="info">
             <h2>Nas Ondas da Fé</h2>
-            <p>Duração: 1h37min
-              Gênero: Comédia
-            </p>
+            <p>Duração: 1h37min</p>
+            <p>Gênero: Comédia</p>
             <p>Onde Assistir: <a href="https://play.google.com/store/movies/details?id=Lqnb0Mcnn9Q.P"
                 target="_blank">Google Play Filmes e Tv</a> </p>
             <button class="trailer-button" data-trailer="https://www.youtube.com/embed/PDO20Dzxpss">Assista ao
@@ -256,15 +266,14 @@
           </div>
         </div>
         <div class="card">
-          <img src="./img/peterpan.jpg" alt="Título do Filme">
+          <img src="./img/MeganPoster.jpg" alt="Título do Filme">
           <div class="info">
-            <h2>Peter Pan</h2>
-            <p>Duração: 1h40min
-              Gênero: Fantasia, Aventura
-            </p>
-            <p>Onde Assistir: <a href="https://www.disneyplus.com/pt-br/movies/peter-pan-wendy/147B2rQASB09"
-                target="_blank">Disney Plus</a> </p>
-            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
+            <h2>M3gan</h2>
+            <p>Duração: 1h42min</p>
+            <p>Gênero: Terror, Ficção Científica</p>
+            <p>Onde Assistir: <a href="https://play.google.com/store/movies/details?id=kH-jVDXcwOs.P"
+                target="_blank">Google Play Filmes e Tv</a> </p>
+            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/JcKRaUGJcqY">Assista ao
               Trailer</button>
           </div>
         </div>
@@ -284,7 +293,7 @@
           <div class="info">
             <h2>Um Sonho de Liberdade (1994)</h2>
             <p>Duração: 2h22min</p>
-             <p>  Gênero: Drama, Ficção Policial </p>
+            <p>  Gênero: Drama, Ficção Policial </p>
             <p>Onde Assistir: <a href="https://play.google.com/store/movies/details?id=yzvgVa69Kdg.P"
                 target="_blank">Google Play Filmes e Tv</a> </p>
             <button class="trailer-button" data-trailer="https://www.youtube.com/embed/v1nZq1vfgSw">Assista ao
@@ -295,9 +304,8 @@
           <img src="./img/PulpFictioncard.jpg" alt="Título do Filme">
           <div class="info">
             <h2>Pulp Fiction: Tempo de Violência (1994)</h2>
-            <p>Duração: 2h34min
-              Gênero: Crime, Drama
-            </p>
+            <p>Duração: 2h34min</p>
+            <p>Gênero: Crime, Drama</p>
             <p>Onde Assistir: <a href="https://play.google.com/store/movies/details?id=0GoYSWUV1Ls"
                 target="_blank">Google Play Filmes e Tv</a> </p>
             <button class="trailer-button" data-trailer="https://www.youtube.com/embed/r5m52kbw0cU">Assista ao
@@ -308,9 +316,8 @@
           <img src="./img/Clubdalutacard.jpg" alt="Título do Filme">
           <div class="info">
             <h2>Club da Luta (1999)</h2>
-            <p>Duração: 2h19min
-              Gênero: Suspense, Drama
-            </p>
+            <p>Duração: 2h19min</p>
+            <p>Gênero: Suspense, Drama</p>
             <p>Onde Assistir: <a href="https://www.primevideo.com/dp/amzn1.dv.gti.14b02470-fb0f-7d69-c65e-b9ab1c235283?autoplay=0&ref_=atv_cf_strg_wb"
                 target="_blank">AmazonPrime</a> </p>
             <button class="trailer-button" data-trailer="https://www.youtube.com/embed/Fs0-4NLSO2Y">Assista ao
@@ -321,9 +328,8 @@
           <img src="./img/ForrestGumpcard.jpg" alt="Título do Filme">
           <div class="info">
             <h2>Forrest Gump: O Contador de Histórias (1994)</h2>
-            <p>Duração: 2h22min
-              Gênero: Drama, Romanse
-            </p>
+            <p>Duração: 2h22min</p>
+            <p>Gênero: Drama, Romanse</p>
             <p>Onde Assistir: <a href="https://www.primevideo.com/dp/amzn1.dv.gti.dcb980c4-4b61-2618-1a5e-75b3b56f1996?autoplay=0&ref_=atv_cf_strg_wb"
                 target="_blank">AmazonPrime</a> </p>
             <button class="trailer-button" data-trailer="https://www.youtube.com/embed/vDY_uZAaU7g">Assista ao
@@ -334,9 +340,8 @@
           <img src="./img/CidadedeDeuscard.jpg" alt="Título do Filme">
           <div class="info">
             <h2>Cidade de Deus (2002)</h2>
-            <p>Duração: 2h20min
-              Gênero: Crime, Drama
-            </p>
+            <p>Duração: 2h20min</p>
+            <p>Gênero: Crime, Drama</p>
             <p>Onde Assistir: <a href="https://globoplay.globo.com/cidade-de-deus/t/5vXVkLJN1R/"
                 target="_blank">Globoplay</a> </p>
             <button class="trailer-button" data-trailer="https://www.youtube.com/embed/fZJUKixyeXM">Assista ao
@@ -347,9 +352,8 @@
           <img src="./img/oresgatedosoldadoryancard.jpg" alt="Título do Filme">
           <div class="info">
             <h2>O Resgate do Soldado Ryan (1998)</h2>
-            <p>Duração: 2h50min
-              Gênero: Guerra, Ação
-            </p>
+            <p>Duração: 2h50min</p>
+            <p>Gênero: Guerra, Ação</p>
             <p>Onde Assistir: <a href="https://play.google.com/store/movies/details?id=Za_Ni4KgQs8"
                 target="_blank">Google Play Filmes e Tv</a> </p>
             <button class="trailer-button" data-trailer="https://www.youtube.com/embed/WdHJ_nLRjIA">Assista ao
@@ -360,9 +364,8 @@
           <img src="./img/cantandonachuvacrd.jpg" alt="Título do Filme">
           <div class="info">
             <h2>Cantando na Chuva (1952)</h2>
-            <p>Duração: 1h43min
-              Gênero: Musical, Romanse
-            </p>
+            <p>Duração: 1h43min</p>
+            <p>Gênero: Musical, Romanse</p>
             <p>Onde Assistir: <a href="https://play.google.com/store/movies/details?id=_fBiAERKFAs.P"
                 target="_blank">Google Play Filmes e Tv</a> </p>
             <button class="trailer-button" data-trailer="https://www.youtube.com/embed/s7z_NgOTQu8">Assista ao
