Ajuste class Banner

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
   <link rel="stylesheet" href="./Glider.js-master/glider.min.css">
   
   <!--Link Boostrap -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+  <!-- --> <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
   crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <!--Script -->
@@ -149,39 +149,39 @@
     <h1 id="title-cine">Nas telas do Cinema</h1>
 
     <!-- Full-width images with number -->
-    <div class="mySlides fade " id="img-active">
+    <div class="mySlides fades " id="img-active">
       <button class="trailer-button" id="cinema-button" data-trailer="https://www.youtube.com/embed/2x-2iYxgMFU">Assista
         ao
         Trailer</button>
       <img src="./img/Homem aranha de volta.jpg" class="images">
     </div>
 
-    <div class="mySlides fade">
+    <div class="mySlides fades">
       <button class="trailer-button" id="cinema-button" data-trailer="https://www.youtube.com/embed/PbEloLH3iKQ">Assista
         ao
         Trailer</button>
       <img src="./img/shazam2banner.jpg" class="images">
     </div>
 
-    <div class="mySlides fade">
+    <div class="mySlides fades">
       <button class="trailer-button" id="cinema-button" data-trailer="https://www.youtube.com/embed/wlOVPkmOe4M">Assista
         ao
         Trailer</button>
       <img src="./img/Panico6baner.jpg" class="images">
     </div>
-    <div class="mySlides fade">
+    <div class="mySlides fades">
       <button class="trailer-button" id="cinema-button" data-trailer="https://www.youtube.com/embed/cDNkh5WybZo">Assista
         ao
         Trailer</button>
       <img src="./img/Super-Mario-Pós-créditos.jpg" class="images">
     </div>
-    <div class="mySlides fade">
+    <div class="mySlides fades">
       <button class="trailer-button" id="cinema-button" data-trailer="https://www.youtube.com/embed/cDNkh5WybZo">Assista
         ao
         Trailer</button>
       <img src="./img/Super-Mario-Pós-créditos.jpg" class="images">
     </div>
-    <div class="mySlides fade">
+    <div class="mySlides fades">
       <button class="trailer-button" id="cinema-button" data-trailer="https://www.youtube.com/embed/cDNkh5WybZo">Assista
         ao
         Trailer</button>
